SpecFlow -> Reqnroll. Update Endjin.RecommendedPractices
Also add reference to System.Text.Json because DiffPath was downgrading us to 8.0.0, which has vulnerabilities

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,7 +9,7 @@ branches:
   master:
     regex: ^main
     tag: preview
-    increment: patch
+    increment: Patch
   dependabot-pr:
     regex: ^dependabot
     tag: dependabot
