--- a/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
@@ -42,17 +42,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="2.0.0" />
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
+    <PackageReference Include="Corvus.Testing.ReqnRoll.NUnit" Version="4.0.3" />
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    
+    <!-- 
+    SystemTextJson.JsonDiffPatch forces us down to System.Text.Json 8.0.0, which has vulnerabilities.
+    It's not entirely obvious why that's happening - it requires >= 8.0.0, and since .NET 8.0
+    has System.Text.Json in the box, I don't know why NuGet decides that this means we want 8.0.0,
+    and not the later version we'd have got if we hadn't said anything.
+    
+    TBD: look into whether there's anything Corvus we could be using instaed of JsonDiffPatch.
+    -->
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     
     <!--
     Using JsonDiffPatch just for its DeepEquals method.
     https://github.com/dotnet/runtime/issues/33388#issuecomment-1104685825
     -->
-    <PackageReference Include="SystemTextJson.JsonDiffPatch" Version="1.3.1" />
+    <PackageReference Include="SystemTextJson.JsonDiffPatch" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
